fix: Header text overflow issue

--- a/style/header-nav.css
+++ b/style/header-nav.css
@@ -41,7 +41,7 @@
     display: flex;
     align-items: center;
     gap: 11px;
-    max-width: 150px;
+    max-width: 250px;
 }
 
 .nav-bar__logo {
